# book-summary-agent

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/book-summary-agent/code/: code-summary.md
aidlc-docs/construction/book-summary-agent/functional-design/: business-logic-model.md  business-rules.md  cicd-design.md  domain-entities.md
aidlc-docs/construction/book-summary-agent/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: book-summary-agent-code-generation-plan.md
aidlc-docs/inception/requirements/: requirements.md
aidlc-docs/inception/reverse-engineering/: architecture.md
aidlc-docs/inception/workflow-planning/: workflow-plan.md
aidlc-docs/operations/: operations.md
src/: main.rs
