[package]
name = "book-summary-agent"
version = "0.1.0"
edition = "2021"
description = "ISBNから書籍の概要を200文字程度で生成するCLIエージェント"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
